--- a/src/components/AuthenticRecipes/AuthenticRecipes.css
+++ b/src/components/AuthenticRecipes/AuthenticRecipes.css
@@ -10,12 +10,23 @@
     align-items: center;
 }
 
-.image-container {
+/* .image-container {
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
+} */
+.image-container {
+    position: relative;
+    height: 261px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* top: 200px; */
+    width: 544px;
+    border-radius: 17px;
 }
 
 .know-more-btn {
