--- a/src/components/specialhampers/specialhampers.css
+++ b/src/components/specialhampers/specialhampers.css
@@ -4,6 +4,7 @@
         flex-direction: column-reverse;
         align-items: center;
         justify-content: center;
+        gap: 11px;
     }
     }
 
