--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -19,3 +19,27 @@
     background-size: cover;
     background-position: center;
 }
+
+.scroll-to-top-btn {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    background-color: #ff7f50;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: opacity 0.3s ease-in-out;
+    z-index: 1000;
+  }
+  
+  .scroll-to-top-btn:hover {
+    background-color: #ff4500;
+  }
+  
+  .scroll-to-top-btn:focus {
+    outline: none;
+  }
+  
