--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -563,6 +563,7 @@
     gap: 5px;
     justify-content: center;
     align-items: center;
+    z-index: 2000;
 }
 
 .hamburger .bar {
@@ -570,6 +571,7 @@
     height: 3px;
     background-color: black;
     border-radius: 5px;
+    z-index: 2000;
 }
 
 /* Mobile responsiveness */
@@ -595,6 +597,7 @@
     /* Show the hamburger icon on mobile */
     .hamburger {
         display: flex;
+        z-index: 2000;
     }
 
     .navbar .nav-right {
