new design changes for mobile devices

--- a/src/components/AuthenticRecipes/AuthenticRecipes.css
+++ b/src/components/AuthenticRecipes/AuthenticRecipes.css
@@ -162,8 +162,6 @@
         gap: 40px; /* Increased gap on larger screens */
     }
 }
-
-.headings{
-    color: #a9802a;
-
+.headings {
+    color: #ec7a77;
 }
